--- a/src/main/resources/static/users.html
+++ b/src/main/resources/static/users.html
@@ -376,7 +376,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
@@ -387,16 +387,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>#1</td>
-                                            <td>Lucas Marx</td>
-                                            <td>lucasmarx@gmail.com</td>
-                                            <td>666999777</td>
-                                            <td><a href="#" class="btn btn-danger btn-circle btn-sm">
-                                                <i class="fas fa-trash"></i>
-                                            </a></td>
 
-                                        </tr>>
                                     </tbody>
                                 </table>
                             </div>
@@ -465,7 +456,7 @@
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
+    <script src="js/users.js"></script>
 
 </body>
 
